# llvm-autoreduce

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  crash_reducer.py  irdump.cpp  miscompilation_reducer.py  pyproject.toml
.devcontainer/: devcontainer.json
.opencode/agent/: extractor.md  reducer.md  security-reviewer.md
.opencode/agents/: extractor.md  reducer.md  security-reviewer.md
.opencode/skills/llvm-crash-reduce/: SKILL.md
.opencode/skills/llvm-miscompile-reduce/: SKILL.md
prompts/: extractor.txt  reducer.txt  security-reviewer.txt
scripts/: reprocess-single.py  update-tools.sh  verify-extract  verify-extract.py  verify-result  verify-result.py
src/llvm_autoreduce/: __init__.py  config.py  daemon.py  extract.py  github.py  opencode.py  tools.py  workdir.py
tests/: test_daemon.py  test_extract.py  test_workdir.py
