[project]
name = "llvm-autoreduce"
version = "0.1.0"
description = "Automated LLVM bug reproducer reduction tool"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "tenacity>=9.0",
]

[project.scripts]
autoreduce-daemon = "llvm_autoreduce.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llvm_autoreduce"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
